attached_assets/Pasted-Checking-available-startup-options-Using-TypeScript-server-with-tsx-app-server-db-ts-2-import-Po-1755766269047_1755766269047.txt
Checking available startup options:
Using TypeScript server with tsx
/app/server/db.ts:2
import { Pool } from 'pg';
         ^

SyntaxError: The requested module 'pg' does not provide an export named 'Pool'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)

Node.js v20.18.1
Starting AddyPin application...
Checking available startup options:
Using TypeScript server with tsx
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Test the application
[root@racknerd-47e65b8 addypin-repo]# curl -s http://localhost:3000/api/stats || echo "Application not responding yet"
Application not responding yet
[root@racknerd-47e65b8 addypin-repo]# clear

[root@racknerd-47e65b8 addypin-repo]# # The issue: Docker fallback chose tsx instead of the built dist/index.js
[root@racknerd-47e65b8 addypin-repo]# # Let's check what dist/index.js actually contains
[root@racknerd-47e65b8 addypin-repo]# head -10 dist/index.js
var __defProp = Object.defineProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __esm = (fn, res) => function __init() {
  return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;
};
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};

[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Fix: Force Docker to use the built backend file
[root@racknerd-47e65b8 addypin-repo]# cat > Dockerfile << 'EOF'
> FROM node:20-alpine3.19
> 
> RUN apk add --no-cache python3 make g++ git
> RUN addgroup -g 1001 -S runner && adduser -u 1001 -S runner -G runner
> 
> WORKDIR /app
> COPY package*.json ./
> RUN npm ci --no-audit --prefer-offline
> 
> COPY . .
> ENV NODE_ENV=production
> RUN npm run build
> 
> RUN chown -R runner:runner /app
> USER runner
> 
> EXPOSE 5000
> # Use BUILT backend directly (no fallback)
> CMD ["node", "dist/index.js"]
> EOF
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# # Rebuild and test
[root@racknerd-47e65b8 addypin-repo]# docker build -t addypin-app .
[+] Building 55.6s (14/14) FINISHED                              docker:default
 => [internal] load build definition from Dockerfile                       0.0s
 => => transferring dockerfile: 436B                                       0.0s
 => [internal] load metadata for docker.io/library/node:20-alpine3.19      0.5s
 => [internal] load .dockerignore                                          0.0s
 => => transferring context: 99B                                           0.0s
 => [1/9] FROM docker.io/library/node:20-alpine3.19@sha256:1cc9088b0fbcb2  0.0s
 => [internal] load build context                                          0.0s
 => => transferring context: 19.06kB                                       0.0s
 => CACHED [2/9] RUN apk add --no-cache python3 make g++ git               0.0s
 => CACHED [3/9] RUN addgroup -g 1001 -S runner && adduser -u 1001 -S run  0.0s
 => CACHED [4/9] WORKDIR /app                                              0.0s
 => CACHED [5/9] COPY package*.json ./                                     0.0s
 => CACHED [6/9] RUN npm ci --no-audit --prefer-offline                    0.0s
 => [7/9] COPY . .                                                         0.2s
 => [8/9] RUN npm run build                                               17.6s
 => [9/9] RUN chown -R runner:runner /app                                 23.3s 
 => exporting to image                                                    13.8s 
 => => exporting layers                                                   13.7s 
 => => writing image sha256:784915590af43b52572988636c1b98b6075361ed72d7b  0.0s 
 => => naming to docker.io/library/addypin-app                             0.0s 
[root@racknerd-47e65b8 addypin-repo]# docker stop addypin-production 2>/dev/null; docker rm addypin-production 2>/dev/null
addypin-production
addypin-production
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# docker run -d -p 3000:5000 --name addypin-production --restart unless-stopped \
>   -e NODE_ENV=production \
>   -e DATABASE_URL="postgresql://addypin:addypin_password@172.17.0.1:5432/addypin_db" \
>   addypin-app
a2905cfe502af5a901be3e127e13326b7ddebf3a1583fb8c65a3b474431b0a79
[root@racknerd-47e65b8 addypin-repo]# 
[root@racknerd-47e65b8 addypin-repo]# sleep 5
[root@racknerd-47e65b8 addypin-repo]# docker logs addypin-production
node:internal/modules/cjs/loader:1228
  throw err;
  ^

Error: Cannot find module '/app/dist/index.js'
    at Module._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Module._load (node:internal/modules/cjs/loader:1051:27)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:173:12)
    at node:internal/main/run_main_module:28:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v20.18.1
node:internal/modules/cjs/loader:1228
  throw err;
  ^

Error: Cannot find module '/app/dist/index.js'
    at Module._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Module._load (node:internal/modules/cjs/loader:1051:27)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:173:12)
    at node:internal/main/run_main_module:28:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v20.18.1
node:internal/modules/cjs/loader:1228
  throw err;
  ^

Error: Cannot find module '/app/dist/index.js'
    at Module._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Module._load (node:internal/modules/cjs/loader:1051:27)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:173:12)
    at node:internal/main/run_main_module:28:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v20.18.1
node:internal/modules/cjs/loader:1228
  throw err;
  ^

Error: Cannot find module '/app/dist/index.js'
    at Module._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Module._load (node:internal/modules/cjs/loader:1051:27)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:173:12)
    at node:internal/main/run_main_module:28:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v20.18.1
node:internal/modules/cjs/loader:1228
  throw err;
  ^

Error: Cannot find module '/app/dist/index.js'
    at Module._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Module._load (node:internal/modules/cjs/loader:1051:27)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:173:12)
    at node:internal/main/run_main_module:28:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v20.18.1
node:internal/modules/cjs/loader:1228
  throw err;
  ^

Error: Cannot find module '/app/dist/index.js'
    at Module._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Module._load (node:internal/modules/cjs/loader:1051:27)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:173:12)
    at node:internal/main/run_main_module:28:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v20.18.1
[root@racknerd-47e65b8 addypin-repo]# curl http://localhost:3000/api/stats
curl: (7) Failed to connect to localhost port 3000: Connection refused
[root@racknerd-47e65b8 addypin-repo]# 
